fix: massage visible

--- a/src/Components/Pages/Authorization/Authorization.scss
+++ b/src/Components/Pages/Authorization/Authorization.scss
@@ -10,6 +10,7 @@
     background-image: url('../../../assets/svg/auth-background.svg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: #eff5ff;
     height: 100vh;
     width: 100%;
   }
